--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,22 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    // retrofit
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // GSON
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 }
